# codex-ai

./: .env  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  diagram.md  docker-compose.yml  pyproject.toml  release-please-config.json  requirements.txt  run_tests.sh
.github/workflows/: deploy.yml  release.yml  test.yml
app/: __init__.py  main.py
app/ai/: __init__.py  summary.py
app/core/: __init__.py  config.py  deps.py  logging.py  metrics.py  middleware.py  privacy.py  security.py
app/models/: __init__.py  database.py  schemas.py  task.py  user.py
app/routers/: __init__.py  auth.py  health.py  metrics.py  summary.py  tasks.py  users.py
app/services/: __init__.py  auth.py  tasks.py  users.py
stubs/bcrypt/: __init__.pyi
stubs/fastapi/: __init__.pyi
stubs/jose/: __init__.pyi
stubs/jose/jwt/: __init__.pyi
stubs/openai/: __init__.pyi
stubs/passlib/: __init__.pyi  context.pyi
stubs/pydantic/: __init__.pyi
stubs/pydantic_settings/: __init__.pyi
stubs/sqlalchemy/: __init__.pyi
stubs/sqlalchemy/exc/: __init__.pyi
stubs/sqlalchemy/ext/: __init__.pyi  asyncio.pyi
stubs/sqlalchemy/orm/: __init__.pyi
tests/: conftest.py  test_metrics.py  test_observability.py  test_summary.py  test_tasks.py  test_users.py
